# bismarck-game/backend/docs/swagger.yaml
@@ -1136,6 +1136,44 @@ paths:
       summary: Получение юнитов игры
       tags:
       - Games
+  /games/{id}/victory-points:
+    get:
+      consumes:
+      - application/json
+      parameters:
+      - description: ID игры
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            additionalProperties: true
+            type: object
+        "400":
+          description: Bad Request
+          schema:
+            additionalProperties: true
+            type: object
+        "401":
+          description: Unauthorized
+          schema:
+            additionalProperties: true
+            type: object
+        "404":
+          description: Not Found
+          schema:
+            additionalProperties: true
+            type: object
+      security:
+      - Bearer: []
+      summary: Получение очков победы для игры
+      tags:
+      - Games
   /phases/all:
     get:
       consumes:
